WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85255
Crash when opening plug-ins in background tabs
https://bugs.webkit.org/show_bug.cgi?id=85255
Summary
Crash when opening plug-ins in background tabs
Anders Carlsson
Reported
2012-04-30 18:33:08 PDT
Crash when opening plug-ins in background tabs
Attachments
Patch
(1.96 KB, patch)
2012-04-30 18:34 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-04-30 18:34:06 PDT
Created
attachment 139568
[details]
Patch
Anders Carlsson
Comment 2
2012-04-30 18:37:23 PDT
Committed
r115698
: <
http://trac.webkit.org/changeset/115698
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug