Crash when opening plug-ins in background tabs https://bugs.webkit.org/show_bug.cgi?id=85255 <rdar://problem/11344053>

Reviewed by Dan Bernstein.

* PluginProcess/mac/PluginControllerProxyMac.mm:
(WebKit::PluginControllerProxy::setLayerHostingMode):
m_layerHostingContext can be null for plug-ins that don't use the Core Animation drawing model, so check for that.

Canonical link: https://commits.webkit.org/102796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115698 268f45cc-cd09-0410-ab3c-d52691b4dbfc